--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,22 @@
 .short_input{
     width:100px;
 }
+.overlay {
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+
+  background-color: #fff;
+  z-index: 10006;
+  display: flex;
+    align-items: center;
+}
+.progress{
+    width:200px;
+    margin: auto;
+
+}
+.leaflet-control-rotate{
+    display:none !important;
+}
